--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,15 @@ services:
     ports:
      - "9200:9200"
      - "9300:9300"
+  logstash:
+    image: logstash:2.2
+    ports:
+      - "5000:5000"
+    links:
+      - elasticsearch
+  kibana:
+    image: kibana:4.4
+    ports:
+      - "5601:5601"
+    links:
+      - elasticsearch
